<resources>
    <string name="app_name">OneMarket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="uname">User Name</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="retype_pwd">Retype Password</string>
    <string name="email">Email</string>
    <string name="retype_email">Retype Email</string>
    <string name="terms_conditions">I agree with terms &amp; conditions</string>
    <string name="nav_header_name">One Market</string>
    <string name="header_details">The biggest online market of Sri Lanka</string>
    <string name="about_version">OneMarket 1.0</string>
    <string name="about_rights">All rights reserved to Hiran Lakshika</string>
    <string name="grid_img_title">Sample</string>
    <string name="latest_items">Latest Items</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart_quantity">Item Quantity : </string>
    <string name="cart_total">Total : Rs. </string>
    <string name="checkout">Checkout</string>
</resources>
